<!--
   Copyright 2016 Google Inc.

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:ap="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:id="@+id/linearLayout0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:weightSum="10">


    <org.rajawali3d.surface.RajawaliSurfaceView
        android:id="@+id/gl_surface_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="top"
        android:layout_weight="4" />

    <com.androidplot.xy.XYPlot
        android:id="@+id/plot"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        ap:label="Spectral Data"
        ap:rangeLabel="range"
        ap:domainLabel="domain"
        ap:borderColor="#000000"
        ap:backgroundColor="#000000"
        ap:graphBackgroundColor="#000000"
        ap:gridBackgroundColor="#111111"
        ap:gridPaddingLeft="20dp"
        ap:gridPaddingRight="20dp"
        ap:gridPaddingTop="20dp"
        ap:gridPaddingBottom="20dp"
        ap:labelTextSize="20sp"
        ap:rangeLabelTextSize="13sp"
        ap:domainLabelTextSize="13sp"
        ap:graphMarginTop="20dp"
        ap:graphMarginBottom="40dp"
        ap:graphMarginLeft="15dp"
        ap:graphMarginRight="10dp"
        ap:graphDomainLineColor="#FFFFFF"
        ap:graphDomainLineThickness="1dp"
        ap:graphRangeLineColor="#FFFFFF"
        ap:graphRangeLineThickness="1dp"
        ap:rangeTickLabelTextSize="15sp"
        ap:rangeOriginTickLabelTextSize="15sp"
        ap:domainTickLabelTextSize="15sp"
        ap:domainOriginTickLabelTextSize="15sp"
        ap:legendTextSize="15sp"
        ap:legendIconHeight="15dp"
        ap:legendIconWidth="15dp"
        ap:legendHeight="25dp"
        ap:legendAnchorPosition="right_bottom"
        android:layout_weight="6" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:paddingLeft="5dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/serviceversion" />

            <TextView
                android:id="@+id/version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NA" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/appversion" />

            <TextView
                android:id="@+id/appversion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NA" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tangoevent" />

            <TextView
                android:id="@+id/tangoevent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NA" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start2device" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:text="@string/status" />

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NA" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/posecount" />

            <TextView
                android:id="@+id/posecount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NA" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deltatime" />

            <TextView
                android:id="@+id/deltatime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NA" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pose" />

            <TextView
                android:id="@+id/pose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NA" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quat" />

            <TextView
                android:id="@+id/quat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NA" />
        </LinearLayout>
    </LinearLayout>



    <Button
        android:id="@+id/resetmotion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="5dp"
        android:text="@string/resetmotiontracking" />
    <Button
        android:id="@+id/conSpec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_above="@+id/conCam"
        android:layout_marginLeft="200dp"
        android:text="Connect Spec" />
    <Button
        android:id="@+id/conCam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="200dp"
        android:text="Connect  Cam" />


    <Button
        android:id="@+id/collect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="335dp"
        android:height="100dp"
        android:background="@android:color/holo_red_dark"
        android:text="Start Collecting" />
</RelativeLayout>
